Fix aliased Edging in PaintFlags::ToSkFont()

PaintFlags::ToSkFont() assumes the default SkFont Edging is kAliased,
but that is no longer the case.

Set kAliased Edging explicitly when AA is disabled.

Bug: 918030
Change-Id: Ia8b38a1190a70eff109d4f9c9ddf50bdcb3b3f56
Reviewed-on: https://chromium-review.googlesource.com/c/1409343
Reviewed-by: enne <enne@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Reviewed-by: Mike Reed <reed@google.com>
Commit-Queue: Florin Malita <fmalita@chromium.org>
Cr-Commit-Position: refs/heads/master@{#622553}
Former-commit-id: e0c9012b3cef2a92b3cf9ce94f44d7d8dd9d4128