cc/paint/paint_flags.cc
@@ -159,6 +159,8 @@ SkFont PaintFlags::ToSkFont() const {
     } else {
       font.setEdging(SkFont::Edging::kAntiAlias);
     }
+  } else {
+    font.setEdging(SkFont::Edging::kAlias);
   }
   return font;
 }
